# poetry2nix-error

./: pyproject.toml
