[tool.poetry]
name = "my_project"
version = "0.1.0"
description = "Minimal example for a bug report"
authors = ["Some guy"]

[tool.poetry.dependencies]
python = "^3.9"
colorconsole = "^0.7.2"
flit-core = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
